# analytics_para_dados_industriais

./: Analytics_para_dados_industriais.ipynb  LICENSE  cliente_ml_modbus.py  controle_processo.ipynb  dados_motor_esteira.csv  historian.db  pyproject.toml  servidor_planta.py  temperatura.ipynb  vibracao.ipynb  visualizacao.ipynb
