[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pymodbus>=3.12.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]
